<resources>
    <string name="app_name" translatable="false">Bote</string>
    <string name="intro_private">Private.</string>
    <string name="intro_distributed">Distributed.</string>
    <string name="intro_secure">Secure.</string>
    <string name="swipe_to_start">Swipe to start</string>
    <string name="i_know_what_to_do">I know what to do</string>
    <string name="intro_1_1">Traditional email is insecure. It was not designed to protect people from dragnet surveillance.</string>
    <string name="intro_1_2">Even if you encrypt your email contents, the email metadata can be monitored to reveal large amounts of information about you and the people you talk to.</string>
    <string name="intro_2_1">Bote is a new kind of email that provides complete end-to-end privacy and security. It runs on the I2P anonymity network, which hides your activity.</string>
    <string name="intro_2_2">When you send an email in Bote, everything is encrypted - including the email metadata. Only the recipient can download and read the email.</string>
    <string name="intro_3_1">With traditional email, you need to trust a central server. And if it is blocked, you can\'t send or receive emails.</string>
    <string name="intro_3_2">Bote uses a distributed peer-to-peer network, similar to BitTorrent. Encrypted emails are split up and stored with many other Bote users.</string>
    <string name="intro_4_1">Adversaries can only see that an email has been sent. They can\'t see the real identity of the sender or recipient.</string>
    <string name="intro_4_2">And Bote emails can be sent with a delay; the sender could be long gone before the encrypted email is stored in the network, preventing timing attacks.</string>
    <string name="intro_5_1">Because Bote is a little different to traditional email, there are a few things to set up before you can start using it.</string>
    <string name="intro_5_2">The setup wizard will take a couple of minutes, and then everything will be ready.</string>
    <string name="lets_get_started">Let\'s get started</string>
    <string name="title_activity_setup">Setup</string>
    <string name="please_finish_setup">Please finish setting up Bote.</string>
    <string name="skip">Skip</string>
    <string name="set_password">Set password</string>
    <string name="setup_set_password_1">You can set a password for Bote. This will prevent other users from reading your emails, and will encrypt all Bote files on your device.</string>
    <string name="setup_set_password_2">If you set a password, automatic email checking will be disabled. You can manually check for emails once you have authenticated by pulling down on the Inbox.</string>
    <string name="setup_set_password_3">If you do not set a password now, you can do so later from the Settings menu.</string>
    <string name="create_identity">Create identity</string>
    <string name="setup_create_identity_1">To receive emails, you need an Identity. This is a set of cryptographic keys that enables you to encrypt and decrypt emails.</string>
    <string name="setup_create_identity_2">A Destination is the public part of an Identity. This is the address that you will give to your contacts so they can send emails to you. When you send emails using an Identity, its Destination is included in the From field so the recipient can reply.</string>
    <string name="setup_create_identity_3">If you do not create an Identity now, you can do so later from the Settings menu. If you only want to send emails, you do not need an Identity, because Bote emails can be sent anonymously. However the recipient will be unable to reply to you.</string>
    <string name="setup_finished">Setup finished</string>
    <string name="setup_finished_1">Bote is configured and ready to use.</string>
    <string name="setup_finished_2">To send and receive emails, Bote needs to connect to the distributed network. You can do this from the menu.</string>
    <string name="setup_finished_3">While Bote is offline, you can read emails that have already been downloaded. You can also write emails and put them in the Outbox; they will be sent the next time Bote is online.</string>
    <string name="go_to_inbox">Go to inbox</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="touch_lock_to_log_in">Touch the lock icon to log in.</string>
    <string name="action_new_email">New email</string>
    <string name="action_attach_file">Attach file</string>
    <string name="select_attachment">Select a file to attach</string>
    <string name="n_bytes" translatable="false">%s B</string>
    <string name="n_kilobytes" translatable="false">%s KB</string>
    <string name="n_megabytes" translatable="false">%s MB</string>
    <string name="action_send_email">Send email</string>
    <string name="action_start_bote">Connect to network</string>
    <string name="action_stop_bote">Disconnect from network</string>
    <string name="action_settings">Settings</string>
    <string name="check_email">Check email</string>
    <string name="checking_email">Checking email…</string>
    <string name="bote_needs_to_be_connected">Bote needs to be connected to the network</string>
    <plurals name="incomplete_emails">
        <item quantity="one">One incomplete email</item>
        <item quantity="other">%d incomplete emails</item>
    </plurals>
    <string name="items_selected">%s selected</string>
    <string name="action_delete">Delete</string>
    <string name="action_mark_read">Mark read</string>
    <string name="action_mark_unread">Mark unread</string>
    <string name="action_move_to">Move to</string>
    <string name="drawer_open">Open nav</string>
    <string name="drawer_close">Close nav</string>
    <string name="enter_password">Enter password:</string>
    <string name="checking_password">Checking password…</string>
    <string name="password_incorrect">Password was incorrect</string>
    <string name="password_file_error">Could not read password verification file</string>
    <string name="folder_inbox">Inbox</string>
    <string name="folder_outbox">Outbox</string>
    <string name="folder_sent">Sent</string>
    <string name="folder_trash">Trash</string>
    <string name="address_book">Address book</string>
    <string name="network_status">Network status</string>
    <string name="not_started">Not started</string>
    <string name="connect_delay">Waiting 3 minutes…</string>
    <string name="connecting">Connecting…</string>
    <string name="connected">Connected</string>
    <string name="error">Error</string>
    <string name="folder_empty">Folder is empty</string>
    <string name="folder_does_not_exist">Folder does not exist</string>
    <string name="waiting_for_network">Waiting on I2P</string>
    <string name="connecting_to_network">Connecting to the Bote network</string>
    <string name="connected_to_network">Connected to the Bote network</string>
    <plurals name="n_new_emails">
        <item quantity="one">One new email</item>
        <item quantity="other">%d new emails</item>
    </plurals>
    <string name="queued">Queued</string>
    <string name="sending">Sending</string>
    <string name="sent_to_short">Sent %1$d of %2$d</string>
    <string name="sent_to">Sent to %1$d out of %2$d recipients</string>
    <string name="email_sent">Email sent</string>
    <string name="gateway_disabled">Gateway disabled</string>
    <string name="no_identity_matches">No identity matches the sender/from field: %s</string>
    <string name="invalid_recipient">Invalid recipient address: %s</string>
    <string name="error_creating_packets">Error creating email packets: %s</string>
    <string name="error_sending">Error while sending email: %s</string>
    <string name="error_saving_metadata">Error saving email metadata: %s</string>
    <string name="email_not_found">Email not found</string>
    <string name="signature_invalid">This email does not have a valid signature. It was probably not sent by %s.</string>
    <string name="email_from">From:</string>
    <string name="email_to">To:</string>
    <string name="email_cc">Cc:</string>
    <string name="email_bcc">Bcc:</string>
    <string name="label_sent">Sent:</string>
    <string name="email_received">Received:</string>
    <string name="email_status">Status:</string>
    <string name="reply">Reply</string>
    <string name="reply_all">Reply all</string>
    <string name="forward">Forward</string>
    <string name="save">Save</string>
    <string name="file_exists_in_downloads">File already exists in Downloads folder</string>
    <string name="saved_to_downloads">%s saved to Downloads folder</string>
    <string name="could_not_save_to_downloads">Could not save file to Downloads folder</string>
    <string name="compose">Compose</string>
    <string name="subject">Subject</string>
    <string name="compose_email">Compose email</string>
    <string name="copy">Copy</string>
    <string name="local_destination">Local Destination:</string>
    <string name="not_set">Not set</string>
    <string name="kademlia_peers">Network Peers:</string>
    <string name="relay_peers">Relay Peers:</string>
    <string name="banned_peers">Banned Peers:</string>
    <string name="connect_error_occurred">Oh dear! Bote couldn\'t connect to the network.</string>
    <string name="this_is_the_error">This is the error that happened:</string>
    <string name="most_errors_fixed_on_restart">You can fix most problems by restarting Bote. To do this, go back to the main Bote page, then click "Disconnect from network" in the menu, and then click "Connect to network" in the menu again.</string>
    <string name="also_check_i2p_android">If that doesn\'t help, check that I2P is running. You can see I2P\'s current status in the notification drawer, or by opening the I2P app. If it isn\'t running properly, restart I2P (in the app, click "Stop", and then click "Start" when it appears). Wait for I2P to be fully running, and then start Bote.</string>
    <string name="pref_title_autoMail">Auto-check mail</string>
    <string name="pref_title_checkInterval">Check interval</string>
    <string name="pref_summ_checkInterval">%s minutes</string>
    <string name="pref_title_delivery">Delivery status</string>
    <string name="pref_summ_delivery">Check delivery status of sent emails</string>
    <string name="pref_title_privacy">Privacy</string>
    <string name="pref_title_hideLocale">Hide locale</string>
    <string name="pref_summ_hideLocale">Use English for text added to outgoing emails (\'Re:\', \'wrote:\', etc.)</string>
    <string name="pref_title_sentTime">Sent time</string>
    <string name="pref_summ_sentTime">Include sent time in outgoing emails</string>
    <string name="pref_title_routing">Routing</string>
    <plurals name="pref_summ_numHops">
        <item quantity="one">%s relay</item>
        <item quantity="other">%s relays</item>
    </plurals>
    <string name="pref_title_minDelay">Minimum delay per hop</string>
    <string name="pref_summ_minDelay">%s minutes</string>
    <string name="pref_title_maxDelay">Maximum delay per hop</string>
    <string name="pref_summ_maxDelay">%s minutes</string>
    <string name="settings_label_app_protection">App protection</string>
    <string name="settings_label_appearance">Appearance</string>
    <string name="settings_label_advanced">Advanced</string>
    <string name="router_settings">Router settings</string>
    <string name="auto">Auto</string>
    <string name="manual">Manual</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="pref_title_identities">Identities</string>
    <string name="public_name">Public name</string>
    <string name="description">Description</string>
    <string name="default_identity">Default identity</string>
</resources>